fix: build.yml